# OAiP_Labs

Semester_1/OAiP_Lab_1/Task_1/: main.cpp
Semester_1/OAiP_Lab_1/Task_2/: CMakeLists.txt  main.cpp
Semester_1/OAiP_Lab_1/Task_3/: main.cpp
Semester_1/OAiP_Lab_1/Task_4/: main.cpp
Semester_1/OAiP_Lab_1/Task_5/: main.cpp
Semester_1/OAiP_Lab_1/Task_6/: main.cpp
Semester_1/OAiP_Lab_1/Task_7/: CMakeLists.txt  main.cpp
Semester_1/OAiP_Lab_1/Task_8/: main.cpp
Semester_1/OAiP_Lab_1/Task_9/: CMakeLists.txt  main.cpp
Semester_1/OAiP_Lab_2/Task_1/: main.cpp
Semester_1/OAiP_Lab_2/Task_10/: CMakeLists.txt  main.cpp
Semester_1/OAiP_Lab_2/Task_11/: CMakeLists.txt  main.cpp
Semester_1/OAiP_Lab_2/Task_12/: CMakeLists.txt  main.cpp
Semester_1/OAiP_Lab_2/Task_13/: CMakeLists.txt  main.cpp
Semester_1/OAiP_Lab_2/Task_14/: CMakeLists.txt  main.cpp
Semester_1/OAiP_Lab_2/Task_15/: CMakeLists.txt  main.cpp
Semester_1/OAiP_Lab_2/Task_16/: CMakeLists.txt  main.cpp
Semester_1/OAiP_Lab_2/Task_17/: CMakeLists.txt  main.cpp
Semester_1/OAiP_Lab_2/Task_2/: main.cpp
Semester_1/OAiP_Lab_2/Task_3/: main.cpp
Semester_1/OAiP_Lab_2/Task_4/: main.cpp
Semester_1/OAiP_Lab_2/Task_5/: CMakeLists.txt  main.cpp
Semester_1/OAiP_Lab_2/Task_6/: main.cpp
Semester_1/OAiP_Lab_2/Task_7/: main.cpp
Semester_1/OAiP_Lab_3/: Блок-схема_1.docx  Блок-схема_2.docx  Блок-схема_3.docx  Блок-схема_5.docx  Блок-схема_6.docx
Semester_1/OAiP_Lab_5/shared lib 5.2/: CMakeLists.txt  main.cpp  task2.cpp  task2.h
Semester_1/OAiP_Lab_5/static lib 5.1/: CMakeLists.txt  main.cpp  task1.cpp  task1.h
(+104 files in other folders)
